merge jdbc metadata changes